# gitbacker

./: .dockerignore  .env.example  .gitignore  .releaserc.json  CHANGELOG.md  README.md  docker-compose.yml  install.sh
backend/api/: README.md  alembic.ini  main.py  pyproject.toml  seed_admin.py
backend/api/alembic/: env.py
backend/api/alembic/versions/: 122a6a3a110b_add_public_key_to_git_credentials.py  a1b2c3d4e5f6_add_notification_channel_types.py  c1d2e3f4a5b6_add_s3_destination_storage.py  d47ddfccc2d0_baseline_schema.py
backend/api/app/: auth.py  celery_app.py  config.py  db.py
backend/api/app/repositories/: backup_job_repo.py  destination_repo.py  encryption_key_repo.py  git_credential_repo.py  notification_channel_repo.py  permission_repo.py  repository_repo.py  restore_job_repo.py  restore_preview_repo.py  (+2 more)
backend/api/tests/: conftest.py  test_auth.py  test_auth_service.py  test_destination_service.py  test_repo_name_util.py  test_repository_service.py  test_user_service.py
backend/backup-core/: README.md  celerybeat-schedule.db  db.py  pyproject.toml  tasks.py  worker.py
backend/backup-core/repositories/: backup_job_repo.py  destination_repo.py  encryption_key_repo.py  git_credential_repo.py  global_settings_repo.py  notification_channel_repo.py  repository_repo.py  restore_job_repo.py  restore_preview_repo.py  snapshot_repo.py
backend/backup-core/services/: backup_service.py  common.py  git_service.py  restore_service.py  scheduler_service.py
backend/backup-core/tests/: conftest.py  test_backup_service.py  test_encryption.py  test_git_service.py  test_sanitize_name.py  test_scheduler_service.py  test_storage_local.py  test_storage_s3.py  test_storage_validation.py
backend/shared/: README.md  pyproject.toml
backend/shared/shared/: crypto.py  destination_stats.py  enums.py  models.py  notifications.py  schemas.py  storage.py  task_signatures.py
backend/shared/tests/: test_enums.py  test_schemas.py
(+88 files in other folders)
